project(vncviewer)

add_definitions(-D_WINDOWS -DRELEASE=0.60-VGL)
include_directories(WINDOWS ${CMAKE_CURRENT_SOURCE_DIR})

if(CMAKE_CL_64)
	add_definitions(-D_WIN64)
endif()

if(MSVC)
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MANIFEST:NO")
endif()

set(SOURCE_FILES BE_ALL_S.C
	CMDLINE.C
	CONFIG.C
	CPROXY.C
	DIALOG.C
	LDISC.C
	LDISCUCS.C
	LOGGING.C
	MINIBIDI.C
	MISC.C
	PINGER.C
	PORTFWD.C
	PROXY.C
	RAW.C
	RLOGIN.C
	SERCFG.C
	SETTINGS.C
	SSH.C
	SSHAES.C
	SSHARCF.C
	SSHBLOWF.C
	SSHBN.C
	SSHCRC.C
	SSHCRCDA.C
	SSHDES.C
	SSHDH.C
	SSHDSS.C
	SSHMD5.C
	SSHPUBK.C
	SSHRAND.C
	SSHRSA.C
	SSHSH256.C
	SSHSH512.C
	SSHSHA.C
	SSHZLIB.C
	TELNET.C
	TERMINAL.C
	TIMING.C
	TREE234.C
	VERSION.C
	WILDCARD.C
	WCWIDTH.C
	X11FWD.C
	WINDOWS/SIZETIP.C
	WINDOWS/WINCFG.C
	WINDOWS/WINCTRLS.C
	WINDOWS/WINDEFS.C
	WINDOWS/WINDLG.C
	WINDOWS/WINDOW.C
	WINDOWS/WINHANDL.C
	WINDOWS/WINHELP.C
	WINDOWS/WINMISC.C
	WINDOWS/WINNET.C
	WINDOWS/WINNOISE.C
	WINDOWS/WINPGNTC.C
	WINDOWS/WINPRINT.C
	WINDOWS/WINPROXY.C
	WINDOWS/WINSER.C
	WINDOWS/WINSTORE.C
	WINDOWS/WINTIME.C
	WINDOWS/WINUCS.C
	WINDOWS/WINUTILS.C)

set_source_files_properties(
	${SOURCE_FILES} PROPERTIES LANGUAGE C
)

add_executable(putty WIN32 ${SOURCE_FILES} WINDOWS/PUTTY.rc)

target_link_libraries(putty
	user32.lib gdi32.lib imm32.lib advapi32.lib comctl32.lib comdlg32.lib
	winspool.lib winmm.lib shell32.lib)
